--- a/public/index.html
+++ b/public/index.html
@@ -272,7 +272,7 @@ url('/img/jingyi-wang-193838-small.jpg');
 
 <h1 id="biography">Biography</h1>
 
-<p>Malte Grosser is a business consultant, who is mainly responsible for data science applications at the business intelligence consultancy and Microsoft partner implexis analytics. He mostly deals with complex problems regarding predictive analytics or artificial intelligence in the retail sector.</p>
+<p>Malte Grosser is a business consultant, who is mainly responsible for data science applications at the business intelligence consultancy and Microsoft partner implexis analytics. He mostly deals with complex problems regarding predictive analytics and artificial intelligence in the retail sector.</p>
 
 <p>He also does his PhD in the neuroradiology of the University Medical Center Hamburg-Eppendorf. His research interests include the applications of machine learning and pattern recognition in neurosciences, where he specializes on the prediction of the outcome of patients suffering from an ischemic stroke.</p>
 
