--- a/public/404.html
+++ b/public/404.html
@@ -207,6 +207,10 @@
   <h2>Talks</h2>
   
   <ul>
+    <li><a href="/talk/dgnr-2017/">Improved localized prediction of tissue outcome in acute ischemic stroke patients</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/talk/advanced-r-solutions/">Advanced R Solutions</a></li>
   </ul>
   
