--- a/public/publication_types/2/index.html
+++ b/public/publication_types/2/index.html
@@ -59,8 +59,8 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Almost Random">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Almost Random">
+  <link rel="alternate" href="/publication_types/2/index.xml" type="application/rss+xml" title="Almost Random">
+  <link rel="feed" href="/publication_types/2/index.xml" type="application/rss+xml" title="Almost Random">
   
 
   <link rel="icon" type="image/png" href="/img/icon.png">
