make blog a test blog for now

--- a/public/404.html
+++ b/public/404.html
@@ -188,7 +188,7 @@
   <h2>Posts</h2>
   
   <ul>
-    <li><a href="/post/introducing-the-snakecase-package/">Introducing the snakecase package</a></li>
+    <li><a href="/post/test-post/">Test Post</a></li>
   </ul>
   
   
