--- a/public/project/rusershamburg/index.html
+++ b/public/project/rusershamburg/index.html
@@ -217,10 +217,10 @@
 <div class="share-box" aria-hidden="true">
   <ul class="share">
     <li>
-      <a class="blogger"
-         href="https://www.r-bloggers.com/"
+      <a class="rss"
+         href="http://www.malte-grosser.com/index.xml"
          target="_blank" rel="noopener">
-        <i class="fa fa-star-o" aria-hidden="true"></i>
+        <i class="fa fa-rss" aria-hidden="true"></i>
       </a>
     </li>
     <li>
