--- a/public/index.html
+++ b/public/index.html
@@ -324,7 +324,7 @@ url('/img/jingyi-wang-193838-small.jpg');
         
         
         <li>
-          <a itemprop="sameAs" href="//www.malte-grosser.com/index.xml" target="_blank" rel="noopener">
+          <a itemprop="sameAs" href="//www.malte-grosser.com/categories/R-bloggers/index.xml" target="_blank" rel="noopener">
             <i class="fa fa-rss big-icon"></i>
           </a>
         </li>
