change Adv R Sol link

--- a/public/ignore/dgnr-2017/index.html
+++ b/public/ignore/dgnr-2017/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="Business Consultant">
   
   
-  <link rel="alternate" hreflang="en-us" href="/ignore/dgnr-2017/">
+  <link rel="alternate" hreflang="en-us" href="http://malte-grosser.com/ignore/dgnr-2017/">
 
   
   
@@ -57,14 +57,14 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Almost Random">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Almost Random">
+  <link rel="alternate" href="http://malte-grosser.com/index.xml" type="application/rss+xml" title="Almost Random">
+  <link rel="feed" href="http://malte-grosser.com/index.xml" type="application/rss+xml" title="Almost Random">
   
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="/ignore/dgnr-2017/">
+  <link rel="canonical" href="http://malte-grosser.com/ignore/dgnr-2017/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -72,7 +72,7 @@
   <meta property="twitter:creator" content="@Tazmaaan">
   
   <meta property="og:site_name" content="Almost Random">
-  <meta property="og:url" content="/ignore/dgnr-2017/">
+  <meta property="og:url" content="http://malte-grosser.com/ignore/dgnr-2017/">
   <meta property="og:title" content="Improved localized prediction of tissue outcome in acute ischemic stroke patients | Almost Random">
   <meta property="og:description" content="">
   <meta property="og:locale" content="en-us">
@@ -246,7 +246,7 @@
   
   
   <span class="middot-divider"></span>
-  <a href="/ignore/dgnr-2017/#disqus_thread"></a>
+  <a href="http://malte-grosser.com/ignore/dgnr-2017/#disqus_thread"></a>
   
 
   
