--- a/public/publication/flottmann-prdict-infarct-volume/index.html
+++ b/public/publication/flottmann-prdict-infarct-volume/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="Business Consultant">
   
   
-  <link rel="alternate" hreflang="en-us" href="/publication/flottmann-prdict-infarct-volume/">
+  <link rel="alternate" hreflang="en-us" href="http://malte-grosser.com/publication/flottmann-prdict-infarct-volume/">
 
   
   
@@ -57,14 +57,14 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Almost Random">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Almost Random">
+  <link rel="alternate" href="http://malte-grosser.com/index.xml" type="application/rss+xml" title="Almost Random">
+  <link rel="feed" href="http://malte-grosser.com/index.xml" type="application/rss+xml" title="Almost Random">
   
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="/publication/flottmann-prdict-infarct-volume/">
+  <link rel="canonical" href="http://malte-grosser.com/publication/flottmann-prdict-infarct-volume/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -72,7 +72,7 @@
   <meta property="twitter:creator" content="@Tazmaaan">
   
   <meta property="og:site_name" content="Almost Random">
-  <meta property="og:url" content="/publication/flottmann-prdict-infarct-volume/">
+  <meta property="og:url" content="http://malte-grosser.com/publication/flottmann-prdict-infarct-volume/">
   <meta property="og:title" content="CT-perfusion stroke imaging: a threshold free probabilistic approach to predict infarct volume compared to traditional ischemic thresholds | Almost Random">
   <meta property="og:description" content="">
   <meta property="og:locale" content="en-us">
@@ -345,7 +345,7 @@
   <nav>
   <ul class="pager">
     
-    <li class="previous"><a href="/publication/schneider-edema-diagnostic-sign/"><span
+    <li class="previous"><a href="http://malte-grosser.com/publication/schneider-edema-diagnostic-sign/"><span
       aria-hidden="true">&larr;</span> Edema is not a reliable diagnostic sign to exclude small brain metastases</a></li>
     
 
