--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="Business Consultant">
   
   
-  <link rel="alternate" hreflang="en-us" href="/publication/">
+  <link rel="alternate" hreflang="en-us" href="http://malte-grosser.com/publication/">
 
   
   
@@ -52,14 +52,14 @@
   
 
   
-  <link rel="alternate" href="/publication/index.xml" type="application/rss+xml" title="Almost Random">
-  <link rel="feed" href="/publication/index.xml" type="application/rss+xml" title="Almost Random">
+  <link rel="alternate" href="http://malte-grosser.com/publication/index.xml" type="application/rss+xml" title="Almost Random">
+  <link rel="feed" href="http://malte-grosser.com/publication/index.xml" type="application/rss+xml" title="Almost Random">
   
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="/publication/">
+  <link rel="canonical" href="http://malte-grosser.com/publication/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -67,7 +67,7 @@
   <meta property="twitter:creator" content="@Tazmaaan">
   
   <meta property="og:site_name" content="Almost Random">
-  <meta property="og:url" content="/publication/">
+  <meta property="og:url" content="http://malte-grosser.com/publication/">
   <meta property="og:title" content="Publications | Almost Random">
   <meta property="og:description" content="Business Consultant">
   <meta property="og:locale" content="en-us">
@@ -271,7 +271,7 @@
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
   <span itemprop="author">
     Flottmann F, Brooks G, Faizy TD, Ernst M, Forkert ND, Grosser M, Thomalla G, Siemonsen S, Fiehler J, Kemmling A</span>.
-  <a href="/publication/flottmann-prdict-infarct-volume/" itemprop="name">CT-perfusion stroke imaging: a threshold free probabilistic approach to predict infarct volume compared to traditional ischemic thresholds</a>.
+  <a href="http://malte-grosser.com/publication/flottmann-prdict-infarct-volume/" itemprop="name">CT-perfusion stroke imaging: a threshold free probabilistic approach to predict infarct volume compared to traditional ischemic thresholds</a>.
   Nature,&nbsp;2017.
   <p>
 
@@ -317,7 +317,7 @@
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
   <span itemprop="author">
     Schneider T, Kuhne JF, Bittrich P, Schroeder J, Magnus T, Mohme M, Grosser M, Schoen G, Fiehler J, Siemonsen S</span>.
-  <a href="/publication/schneider-edema-diagnostic-sign/" itemprop="name">Edema is not a reliable diagnostic sign to exclude small brain metastases</a>.
+  <a href="http://malte-grosser.com/publication/schneider-edema-diagnostic-sign/" itemprop="name">Edema is not a reliable diagnostic sign to exclude small brain metastases</a>.
   PLoS One,&nbsp;2017.
   <p>
 
@@ -359,7 +359,7 @@
   <i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
   <span itemprop="author">
     Faizy TD, Thaler C, Kumar D, Sedlacik J, Broocks G, Grosser M, Stellmann JP, Heesen C, Fiehler J, Siemonsen S</span>.
-  <a href="/publication/faizy-ms-lesion-heterogeneity-myelin-water-imaging/" itemprop="name">Heterogeneity of Multiple Sclerosis Lesions in Multislice Myelin Water Imaging</a>.
+  <a href="http://malte-grosser.com/publication/faizy-ms-lesion-heterogeneity-myelin-water-imaging/" itemprop="name">Heterogeneity of Multiple Sclerosis Lesions in Multislice Myelin Water Imaging</a>.
   PLoS One,&nbsp;2016.
   <p>
 
