--- a/public/404.html
+++ b/public/404.html
@@ -220,6 +220,13 @@
 
   
   
+  <h2>Posts</h2>
+  
+  <ul>
+    <li><a href="http://malte-grosser.com/post/introducing-the-snakecase-package/">Introducing the snakecase package</a></li>
+  </ul>
+  
+  
 
   
   
