--- a/public/index.html
+++ b/public/index.html
@@ -68,8 +68,8 @@
 
   <meta property="twitter:card" content="summary_large_image">
   
-  <meta property="twitter:site" content="@Tazmaaan">
-  <meta property="twitter:creator" content="@Tazmaaan">
+  <meta property="twitter:site" content="@https://twitter.com/malte_grosser">
+  <meta property="twitter:creator" content="@https://twitter.com/malte_grosser">
   
   <meta property="og:site_name" content="Almost Random">
   <meta property="og:url" content="http://malte-grosser.com/">
@@ -317,7 +317,7 @@ url('http://malte-grosser.com/img/jingyi-wang-193838-small.jpg');
         
         
         <li>
-          <a itemprop="sameAs" href="//twitter.com/Tazmaaan" target="_blank" rel="noopener">
+          <a itemprop="sameAs" href="https://twitter.com/malte_grosser" target="_blank" rel="noopener">
             <i class="fa fa-twitter big-icon"></i>
           </a>
         </li>
@@ -355,7 +355,7 @@ url('http://malte-grosser.com/img/jingyi-wang-193838-small.jpg');
 
 <p>I am a business consultant at implexis analytics, where I am mainly responsible for data science applications and predictive analytics in the retail sector.</p>
 
-<p>I am also a PhD candidate in the neuroradiology of the University Medical Center Hamburg-Eppendorf. My research interests include the application of machine learning and pattern recognition in neurosciences, where I specialize on the prediction of the outcome of patients suffering from an ischemic stroke.</p>
+<p>Additionally, I am a PhD candidate in the neuroradiology of the <a href="https://www.uke.de/" target="_blank">UKE</a>. My research interests include the application of machine learning and pattern recognition in neurosciences. This is where I specialize on the prediction of the outcome of patients suffering from an ischemic stroke.</p>
 
 <p>Regarding the overlap of both positions, I am focussing on higher programming languages, big data technologies and analytical toolchains, leading me &ndash; almost randomly &ndash; into all kind of different use cases and side projects.</p>
 
