--- a/public/talk/snakecase-pkg/index.html
+++ b/public/talk/snakecase-pkg/index.html
@@ -68,8 +68,8 @@
 
   <meta property="twitter:card" content="summary_large_image">
   
-  <meta property="twitter:site" content="@Tazmaaan">
-  <meta property="twitter:creator" content="@Tazmaaan">
+  <meta property="twitter:site" content="@https://twitter.com/malte_grosser">
+  <meta property="twitter:creator" content="@https://twitter.com/malte_grosser">
   
   <meta property="og:site_name" content="Almost Random">
   <meta property="og:url" content="http://malte-grosser.com/talk/snakecase-pkg/">
