--- a/public/index.html
+++ b/public/index.html
@@ -290,8 +290,8 @@ url('http://malte-grosser.com/img/jingyi-wang-193838-small.jpg');
 
         
         <h3 itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
-          <a href="https://www.implexis-solutions.com/analytics/de/implexis-analytics" target="_blank" itemprop="url" rel="noopener">
-          <span itemprop="name">implexis analytics</span>
+          <a href="https://www.hitachi-solutions.de/" target="_blank" itemprop="url" rel="noopener">
+          <span itemprop="name">Hitachi Solutions</span>
           </a>
         </h3>
         
@@ -353,9 +353,9 @@ url('http://malte-grosser.com/img/jingyi-wang-193838-small.jpg');
 
 <h1 id="biography">Biography</h1>
 
-<p>I am a business consultant at implexis analytics, where I am mainly responsible for data science applications and predictive analytics in the retail sector.</p>
+<p>I am a business consultant at <a href="https://www.hitachi-solutions.de/" target="_blank">Hitachi Solutions</a>, where I am mainly responsible for data science applications and predictive analytics.</p>
 
-<p>Additionally, I am a PhD candidate in the neuroradiology of the <a href="https://www.uke.de/" target="_blank">UKE</a>. My research interests include the application of machine learning and pattern recognition in neurosciences. This is where I specialize on the prediction of the outcome of patients suffering from an ischemic stroke.</p>
+<p>Additionally, I am a PhD candidate in the neuroradiology of the <a href="https://www.uke.de/" target="_blank">UKE</a>. My research interests include the application of machine learning and pattern recognition in neurosciences where I specialize on the prediction of tissue outcome of patients suffering from an ischemic stroke.</p>
 
 <p>Regarding the overlap of both positions, I am focussing on higher programming languages, big data technologies and analytical toolchains, leading me &ndash; almost randomly &ndash; into all kind of different use cases and side projects.</p>
 
