--- a/public/project/rusershamburg/index.html
+++ b/public/project/rusershamburg/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="Business Consultant">
   
   
-  <link rel="alternate" hreflang="en-us" href="http://malte-grosser.com/project/rusershamburg/">
+  <link rel="alternate" hreflang="en-us" href="/project/rusershamburg/">
 
   
   
@@ -57,14 +57,14 @@
   
 
   
-  <link rel="alternate" href="http://malte-grosser.com/index.xml" type="application/rss+xml" title="Almost Random">
-  <link rel="feed" href="http://malte-grosser.com/index.xml" type="application/rss+xml" title="Almost Random">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Almost Random">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Almost Random">
   
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="http://malte-grosser.com/project/rusershamburg/">
+  <link rel="canonical" href="/project/rusershamburg/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -72,7 +72,7 @@
   <meta property="twitter:creator" content="@https://twitter.com/malte_grosser">
   
   <meta property="og:site_name" content="Almost Random">
-  <meta property="og:url" content="http://malte-grosser.com/project/rusershamburg/">
+  <meta property="og:url" content="/project/rusershamburg/">
   <meta property="og:title" content="rusershamburg | Almost Random">
   <meta property="og:description" content="">
   <meta property="og:locale" content="en-us">
@@ -292,7 +292,7 @@ Aliquam in turpis accumsan, malesuada nibh ut, hendrerit justo. Cum sociis natoq
   <nav>
   <ul class="pager">
     
-    <li class="previous"><a href="http://malte-grosser.com/project/advanced-r-solutions/"><span
+    <li class="previous"><a href="/project/advanced-r-solutions/"><span
       aria-hidden="true">&larr;</span> Advanced R Solutions</a></li>
     
 
