--- a/public/publication_types/index.html
+++ b/public/publication_types/index.html
@@ -13,7 +13,7 @@
   <meta name="description" content="Business Consultant">
   
   
-  <link rel="alternate" hreflang="en-us" href="http://malte-grosser.com/publication_types/">
+  <link rel="alternate" hreflang="en-us" href="/publication_types/">
 
   
   
@@ -59,14 +59,14 @@
   
 
   
-  <link rel="alternate" href="http://malte-grosser.com/publication_types/index.xml" type="application/rss+xml" title="Almost Random">
-  <link rel="feed" href="http://malte-grosser.com/publication_types/index.xml" type="application/rss+xml" title="Almost Random">
+  <link rel="alternate" href="/publication_types/index.xml" type="application/rss+xml" title="Almost Random">
+  <link rel="feed" href="/publication_types/index.xml" type="application/rss+xml" title="Almost Random">
   
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="http://malte-grosser.com/publication_types/">
+  <link rel="canonical" href="/publication_types/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -74,7 +74,7 @@
   <meta property="twitter:creator" content="@https://twitter.com/malte_grosser">
   
   <meta property="og:site_name" content="Almost Random">
-  <meta property="og:url" content="http://malte-grosser.com/publication_types/">
+  <meta property="og:url" content="/publication_types/">
   <meta property="og:title" content="Publication_types | Almost Random">
   <meta property="og:description" content="Business Consultant">
   <meta property="og:locale" content="en-us">
@@ -228,7 +228,7 @@
   
   
   <div>
-    <h2><a href="http://malte-grosser.com/publication_types/2/">2</a></h2>
+    <h2><a href="/publication_types/2/">2</a></h2>
     <div class="article-style">
       
     </div>
