--- a/public/404.html
+++ b/public/404.html
@@ -57,8 +57,8 @@
   
 
   
-  <link rel="alternate" href="http://malte-grosser.com/index.xml" type="application/rss+xml" title="Almost Random">
-  <link rel="feed" href="http://malte-grosser.com/index.xml" type="application/rss+xml" title="Almost Random">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Almost Random">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Almost Random">
   
 
   <link rel="icon" type="image/png" href="/img/icon.png">
@@ -223,7 +223,7 @@
   <h2>Posts</h2>
   
   <ul>
-    <li><a href="http://malte-grosser.com/post/introducing-the-snakecase-package/">Introducing the snakecase package</a></li>
+    <li><a href="/post/introducing-the-snakecase-package/">Introducing the snakecase package</a></li>
   </ul>
   
   
@@ -233,15 +233,15 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="http://malte-grosser.com/publication/flottmann-prdict-infarct-volume/">CT-perfusion stroke imaging: a threshold free probabilistic approach to predict infarct volume compared to traditional ischemic thresholds</a></li>
+    <li><a href="/publication/flottmann-prdict-infarct-volume/">CT-perfusion stroke imaging: a threshold free probabilistic approach to predict infarct volume compared to traditional ischemic thresholds</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://malte-grosser.com/publication/schneider-edema-diagnostic-sign/">Edema is not a reliable diagnostic sign to exclude small brain metastases</a></li>
+    <li><a href="/publication/schneider-edema-diagnostic-sign/">Edema is not a reliable diagnostic sign to exclude small brain metastases</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://malte-grosser.com/publication/faizy-ms-lesion-heterogeneity-myelin-water-imaging/">Heterogeneity of Multiple Sclerosis Lesions in Multislice Myelin Water Imaging</a></li>
+    <li><a href="/publication/faizy-ms-lesion-heterogeneity-myelin-water-imaging/">Heterogeneity of Multiple Sclerosis Lesions in Multislice Myelin Water Imaging</a></li>
   </ul>
   
   
@@ -251,15 +251,15 @@
   <h2>Talks</h2>
   
   <ul>
-    <li><a href="http://malte-grosser.com/talk/advanced-r-solutions/">Advanced R Solutions</a></li>
+    <li><a href="/talk/advanced-r-solutions/">Advanced R Solutions</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://malte-grosser.com/talk/interactive-spatial-clusters/">Interactive spatial clusters</a></li>
+    <li><a href="/talk/interactive-spatial-clusters/">Interactive spatial clusters</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://malte-grosser.com/talk/snakecase-pkg/">snakecase-pkg</a></li>
+    <li><a href="/talk/snakecase-pkg/">snakecase-pkg</a></li>
   </ul>
   
   
@@ -269,15 +269,15 @@
   <h2>Projects</h2>
   
   <ul>
-    <li><a href="http://malte-grosser.com/project/rusershamburg/">rusershamburg</a></li>
+    <li><a href="/project/rusershamburg/">rusershamburg</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://malte-grosser.com/project/advanced-r-solutions/">Advanced R Solutions</a></li>
+    <li><a href="/project/advanced-r-solutions/">Advanced R Solutions</a></li>
   </ul>
   
   <ul>
-    <li><a href="http://malte-grosser.com/project/snakecase-pkg/">snakecase-pkg</a></li>
+    <li><a href="/project/snakecase-pkg/">snakecase-pkg</a></li>
   </ul>
   
   
