--- a/public/index.html
+++ b/public/index.html
@@ -353,11 +353,11 @@ url('/img/jingyi-wang-193838-small.jpg');
 
 <h1 id="biography">Biography</h1>
 
-<p>I am a business consultant at <a href="https://www.hitachi-solutions.de/" target="_blank">Hitachi Solutions</a>, where I am mainly responsible for data science applications and predictive analytics.</p>
+<p>I am a business consultant at <a href="https://www.hitachi-solutions.de/" target="_blank">Hitachi Solutions</a> where I am mainly responsible for data science applications and predictive analytics.</p>
 
-<p>Additionally, I am a PhD candidate in the neuroradiology of the <a href="https://www.uke.de/" target="_blank">UKE</a>. My research interests include the application of machine learning and pattern recognition in neurosciences where I specialize on the prediction of tissue outcome of patients suffering from an ischemic stroke.</p>
+<p>Besides my work for Hitachi, I am a PhD candidate in the neuroradiology of the <a href="https://www.uke.de/" target="_blank">UKE</a> where my focus is on new approaches to predict the tissue outcome of patients suffering from an ischemic stroke.</p>
 
-<p>Regarding the overlap of both positions, I am focussing on higher programming languages, big data technologies and analytical toolchains, leading me &ndash; almost randomly &ndash; into all kind of different use cases and side projects.</p>
+<p>Due to the similarities between both activities, I am focussing on higher programming languages, big data technologies and analytic tool chains, which leads me - almost by chance - into all sorts of different use cases and side projects.</p>
 
 
     <div class="row">
