--- a/public/index.html
+++ b/public/index.html
@@ -357,7 +357,7 @@ url('/img/jingyi-wang-193838-small.jpg');
 
 <p>Besides my work for Hitachi, I am a PhD candidate in the neuroradiology of the <a href="https://www.uke.de/" target="_blank">UKE</a> where my focus is on new approaches to predict the tissue outcome of patients suffering from an ischemic stroke.</p>
 
-<p>Due to the similarities between both activities, I am focussing on higher programming languages, big data technologies and analytic tool chains, which leads me - almost by chance - into all sorts of different use cases and side projects.</p>
+<p>Due to the similarities between both roles, I am focussing on higher programming languages, big data technologies and analytic tool chains, which leads me - almost by chance - into all sorts of different use cases and side projects.</p>
 
 
     <div class="row">
