--- a/public/index.html
+++ b/public/index.html
@@ -746,7 +746,7 @@ ImportWhen you do a data analysis, most of the data already exists and you impo
           
           <a href="https://advanced-r-solutions.rbind.io/" title="" class="card-image hover-overlay"
              target="_blank">
-            <img src="/img/advrs_cover4.png" alt="" class="img-responsive">
+            <img src="/img/advrs_cover_5.png" alt="" class="img-responsive">
           </a>
           
           <div class="card-text">
