--- a/public/index.html
+++ b/public/index.html
@@ -349,7 +349,7 @@ url('http://malte-grosser.com/img/jingyi-wang-193838-small.jpg');
 
 <p>Besides this job, I am about to finish my PhD thesis at the <a href="https://www.uke.de/" target="_blank">UKE</a> about tissue outcome prediction of acute ischemic stroke patients.</p>
 
-<p>In the past, I have worked a lot in parallel in business and research. Due to the overlap and the often similar technical requirements of the projects I developed a general interest in higher level programming languages for dealing with data. Through this I met a lot of cool people and and interesting people and collected ideas for small side projects every now and then. Some of them can be found on this site.</p>
+<p>In the past, I have worked a lot in parallel in business and research. Due to the overlap and the often similar technical requirements of the projects I developed a general interest in higher level programming languages for dealing with data. Through this I met a lot of cool people and collected ideas for small side projects every now and then. Some of them can be found on this site.</p>
 
 
     <div class="row">
