--- a/public/index.html
+++ b/public/index.html
@@ -345,11 +345,11 @@ url('http://malte-grosser.com/img/jingyi-wang-193838-small.jpg');
   </div>
   <div class="col-xs-12 col-md-8" itemprop="description">
 
-    <p>I am currently working as Chief Data Scientist at  <a href="https://www.cronbach.co/" target="_blank">Cronbach</a>, where I am mainly responsible for the technological and analytical processes of the company.</p>
+    <p>I am currently working as Chief Data Scientist at  <a href="https://www.cronbach.co/" target="_blank">Cronbach</a>, where I am mainly responsible for the technological and analytical processes of the company. In addition to our contextual and psychographic targeting solution, I like to develop small tools to support our consultants in the form of R-Packages or Shiny Apps. Preferably with components of machine learning as well.</p>
 
 <p>Besides this job, I am about to finish my PhD thesis at the <a href="https://www.uke.de/" target="_blank">UKE</a> about tissue outcome prediction of acute ischemic stroke patients.</p>
 
-<p>In the past, I have worked a lot in parallel in business and research. Due to the overlap and the often similar technical requirements of the projects I developed a general interest in higher level programming languages for dealing with data. Through this I met a lot of cool people and collected ideas for small side projects every now and then. Some of them can be found on this site.</p>
+<p>In the past, I did a lot of parallel work in business and research. Due to the overlaps and the often similar technical requirements of the projects, I developed a general interest in higher level programming languages for dealing with data. Through this I met a lot of cool people, and every now and then one or the other idea for a side project arose that we ended up realizing together. Some of these projects can be found here on this page.</p>
 
 
     <div class="row">
