--- a/public/index.html
+++ b/public/index.html
@@ -287,7 +287,7 @@ url('http://malte-grosser.com/img/jingyi-wang-193838-small.jpg');
         
         <h3 itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
           <a href="https://www.cronbach.co/" target="_blank" itemprop="url" rel="noopener">
-          <span itemprop="name">Cronbach GmbH</span>
+          <span itemprop="name">Cronbach GmbH – Data Driven Relevance</span>
           </a>
         </h3>
         
