--- a/public/index.html
+++ b/public/index.html
@@ -345,7 +345,7 @@ url('http://malte-grosser.com/img/jingyi-wang-193838-small.jpg');
   </div>
   <div class="col-xs-12 col-md-8" itemprop="description">
 
-    <p>I am currently working as Chief Data Scientist at  <a href="https://www.cronbach.co/" target="_blank">Cronbach</a>, where I am mainly responsible for the technological and analytical processes of the company. In addition to our contextual and psychographic targeting solution, I like to develop small tools to support our consultants in the form of R-Packages or Shiny Apps. Preferably with components of machine learning as well.</p>
+    <p>I am currently working as Chief Data Scientist at  <a href="https://www.cronbach.co/" target="_blank">Cronbach</a>, where I am mainly responsible for the technological and analytical processes of the company. In addition to our contextual and psychographic targeting solution (see <a href="https://www.mediaplus.com/de/news/ne-r-o-ai.html" target="_blank">here</a> for more info), I like to develop small tools to support our customers and consultants in the form of R-Packages or Shiny Apps. Preferably with components of machine learning as well.</p>
 
 <p>Besides this job, I am about to finish my PhD thesis at the <a href="https://www.uke.de/" target="_blank">UKE</a> about tissue outcome prediction of acute ischemic stroke patients.</p>
 
