--- a/public/index.html
+++ b/public/index.html
@@ -349,7 +349,7 @@ url('http://malte-grosser.com/img/jingyi-wang-193838-small.jpg');
 
 <p>Besides this job, I am about to finish my PhD thesis at the <a href="https://www.uke.de/" target="_blank">UKE</a> about tissue outcome prediction of acute ischemic stroke patients.</p>
 
-<p>In the past, I did a lot of parallel work in business and research. Due to the overlaps and the often similar technical requirements of the projects, I developed a general interest in higher level programming languages for dealing with data. Through this I met a lot of cool people, and every now and then one or the other idea for a side project arose that we ended up realizing together. Some of these projects can be found here on this page.</p>
+<p>In the past, I did a lot of parallel work in business and research. Due to the overlaps and the often similar technical requirements of the projects, I developed a general interest in higher level programming languages for dealing with data. Through this I met a lot of cool people, and every now and then we realized one or the other idea for a side project together. Some of these results can be found here on this page.</p>
 
 
     <div class="row">
