--- a/public/index.html
+++ b/public/index.html
@@ -234,7 +234,7 @@ background-color: #666;
 
 background-image:
 linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
-url('http://malte-grosser.com/img/Charly_1.jpg');
+url('http://malte-grosser.com/img/katze_unsplash.jpg');
 
 ;">
 
