--- a/public/index.html
+++ b/public/index.html
@@ -234,7 +234,7 @@ background-color: #666;
 
 background-image:
 linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
-url('http://malte-grosser.com/img/katze_unsplash_2.jpg');
+url('http://malte-grosser.com/img/code_1.jpg');
 
 ;">
 
@@ -245,9 +245,7 @@ url('http://malte-grosser.com/img/katze_unsplash_2.jpg');
     </h1>
 
     
-    <p class="hero-lead">Hi, thanks for visiting my little page about my current Data Science projects.</p>
-
-<div style="margin-bottom: 12em; overflow: auto; height:12px;"></div> 
+    <p class="hero-lead"><div style="margin-bottom: 12em; overflow: auto; height:12px;"></div> 
 </p>
     
 
@@ -345,7 +343,9 @@ url('http://malte-grosser.com/img/katze_unsplash_2.jpg');
   </div>
   <div class="col-xs-12 col-md-8" itemprop="description">
 
-    <p>I am currently working as Chief Data Scientist at  <a href="https://www.cronbach.co/" target="_blank">Cronbach</a>, where I am mainly responsible for the technological and analytical processes of the company. In addition to our contextual and psychographic targeting solution (see <a href="https://www.mediaplus.com/de/news/ne-r-o-ai.html" target="_blank">here</a> for more info), I like to develop small tools to support our customers and consultants in the form of R-Packages or Shiny Apps. Preferably with components of machine learning as well.</p>
+    <p>Hi, thank you for visiting my little page about my Data Science projects.</p>
+
+<p>I am working as Chief Data Scientist at  <a href="https://www.cronbach.co/" target="_blank">Cronbach</a>, where I am mainly responsible for the technological and analytical processes of the company. In addition to our contextual and psychographic targeting solution (see <a href="https://www.mediaplus.com/de/news/ne-r-o-ai.html" target="_blank">here</a> for more info), I like to develop small tools to support our customers and consultants in the form of R-Packages or Shiny Apps. Preferably with components of machine learning as well.</p>
 
 <p>Besides this job, I am about to finish my PhD thesis at the <a href="https://www.uke.de/" target="_blank">UKE</a> about tissue outcome prediction of acute ischemic stroke patients.</p>
 
