--- a/public/index.html
+++ b/public/index.html
@@ -271,8 +271,8 @@ url('http://malte-grosser.com/img/code_1.jpg');
     <div id="profile">
 
       
-      <div class="portrait" style="background-image: url('http://malte-grosser.com/img/MGO_small.jpg');"></div>
-      <meta itemprop="image" content="http://malte-grosser.com/img/MGO_small.jpg">
+      <div class="portrait" style="background-image: url('http://malte-grosser.com/img/code_2.JPG');"></div>
+      <meta itemprop="image" content="http://malte-grosser.com/img/code_2.JPG">
       
 
       <div class="portrait-title">
