--- a/public/index.html
+++ b/public/index.html
@@ -234,7 +234,7 @@ background-color: #666;
 
 background-image:
 linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
-url('http://malte-grosser.com/img/code_1.jpg');
+url('http://malte-grosser.com/img/code_2.JPG');
 
 ;">
 
@@ -271,8 +271,8 @@ url('http://malte-grosser.com/img/code_1.jpg');
     <div id="profile">
 
       
-      <div class="portrait" style="background-image: url('http://malte-grosser.com/img/code_2.JPG');"></div>
-      <meta itemprop="image" content="http://malte-grosser.com/img/code_2.JPG">
+      <div class="portrait" style="background-image: url('http://malte-grosser.com/img/MGO_small.jpg');"></div>
+      <meta itemprop="image" content="http://malte-grosser.com/img/MGO_small.jpg">
       
 
       <div class="portrait-title">
