--- a/public/index.html
+++ b/public/index.html
@@ -229,6 +229,12 @@
 
 <section id="hero" class="hero-overlay" style="
 
+background-color: #666;
+
+
+background-image:
+linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
+url('http://malte-grosser.com/img/Go.jpg');
 
 ;">
 
@@ -337,13 +343,9 @@
   </div>
   <div class="col-xs-12 col-md-8" itemprop="description">
 
-    <p>Hi, thank you for visiting my little page about my Data Science projects.</p>
+    <p>Hi, welcome on my page about my Data Science projects.</p>
 
-<p>I am working as Chief Data Scientist at  <a href="https://www.cronbach.co/" target="_blank">Cronbach</a>, where I am mainly responsible for the technological and analytical processes of the company. In addition to our contextual and psychographic targeting solution (see <a href="https://www.mediaplus.com/de/news/ne-r-o-ai.html" target="_blank">here</a> for more info), I like to develop small tools to support our customers and consultants in the form of R-Packages or Shiny Apps. Preferably with components of machine learning as well.</p>
-
-<p>Besides this job, I am about to finish my PhD thesis at the <a href="https://www.uke.de/" target="_blank">UKE</a> about tissue outcome prediction of acute ischemic stroke patients.</p>
-
-<p>In the past, I did a lot of parallel work in business and research. Due to the overlaps and the often similar technical requirements of the projects, I developed a general interest in higher level programming languages for dealing with data. Through this I met a lot of cool people, and every now and then we realized one or the other idea for a side project together. Some of these results can be found here on this page.</p>
+<p>In the past, I did a lot of parallel work in industry and research. Due to the overlaps and the often similar technical requirements of the projects, I developed a general interest in higher level programming languages for dealing with data. Through this I met a lot of cool people, and every now and then we realized one or the other idea for a side project together. Some of these results can be found here on this page.</p>
 
 
     <div class="row">
