--- a/public/index.html
+++ b/public/index.html
@@ -337,7 +337,7 @@ url('http://malte-grosser.com/img/Go.jpg');
 
     <p>Hi, welcome to this page about my personal Data Science projects.</p>
 
-<p>In the past, I did a lot of parallel work in industry and research. (Currently I am working as a Chief Data Scientist and a PhD candidate.) Due to the overlaps and the often similar technical requirements of the projects, I developed a general interest in higher level programming languages for dealing with data. Through this I met a lot of cool people, and every now and then we realized one or the other idea for a side project together. Some of these results can be found here on this page.</p>
+<p>In the past, I did a lot of parallel work in industry and research. (Currently I am working as a Chief Data Scientist and a PhD candidate.) Due to the overlaps and the often similar technical requirements of these roles, I developed a general interest in higher level programming languages for dealing with data. Through this I met a lot of cool people, and every now and then we realized one or the other idea for a side project together. Some of the results can be found here on this page.</p>
 
 
     <div class="row">
