--- a/public/404.html
+++ b/public/404.html
@@ -228,7 +228,11 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="http://malte-grosser.com/publication/flottmann-prdict-infarct-volume/">CT-perfusion stroke imaging: a threshold free probabilistic approach to predict infarct volume compared to traditional ischemic thresholds</a></li>
+    <li><a href="http://malte-grosser.com/publication/grosser-spatial-features/">Improved multi-parametric prediction of tissue outcome in acute ischemic stroke patients using spatial features</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="http://malte-grosser.com/publication/flottmann-predict-infarct-volume/">CT-perfusion stroke imaging: a threshold free probabilistic approach to predict infarct volume compared to traditional ischemic thresholds</a></li>
   </ul>
   
   <ul>
