--- a/public/404.html
+++ b/public/404.html
@@ -228,6 +228,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="http://malte-grosser.com/publication/grosser-localized-prediction/">Localized prediction of tissue outcome in acute ischemic stroke patients using diffusion- and perfusion-weighted MRI datasets</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="http://malte-grosser.com/publication/grosser-spatial-features/">Improved multi-parametric prediction of tissue outcome in acute ischemic stroke patients using spatial features</a></li>
   </ul>
   
