--- a/public/404.html
+++ b/public/404.html
@@ -228,15 +228,15 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="http://malte-grosser.com/publication/grosser-localized-prediction/">Localized prediction of tissue outcome in acute ischemic stroke patients using diffusion- and perfusion-weighted MRI datasets</a></li>
-  </ul>
-  
-  <ul>
     <li><a href="http://malte-grosser.com/publication/grosser-spatial-features/">Improved multi-parametric prediction of tissue outcome in acute ischemic stroke patients using spatial features</a></li>
   </ul>
   
   <ul>
     <li><a href="http://malte-grosser.com/publication/flottmann-predict-infarct-volume/">CT-perfusion stroke imaging: a threshold free probabilistic approach to predict infarct volume compared to traditional ischemic thresholds</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="http://malte-grosser.com/publication/honigstein-cln3-introduction/">Longitudinal MRI brain volumetry in CLN3 disease: Introduction of a new sensitive and objective marker for the measurement of clinical disease outcome</a></li>
   </ul>
   
   <ul>
