--- a/public/publication_types/2/index.html
+++ b/public/publication_types/2/index.html
@@ -245,6 +245,13 @@
   </div>
   
   <div>
+    <h2><a href="http://malte-grosser.com/publication/honigstein-cln3-introduction/">Longitudinal MRI brain volumetry in CLN3 disease: Introduction of a new sensitive and objective marker for the measurement of clinical disease outcome</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
+  <div>
     <h2><a href="http://malte-grosser.com/publication/schneider-edema-diagnostic-sign/">Edema is not a reliable diagnostic sign to exclude small brain metastases</a></h2>
     <div class="article-style">
       
