--- a/public/404.html
+++ b/public/404.html
@@ -228,10 +228,6 @@
   <h2>Publications</h2>
   
   <ul>
-    <li><a href="http://malte-grosser.com/publication/grosser-spatial-features/">Improved multi-parametric prediction of tissue outcome in acute ischemic stroke patients using spatial features</a></li>
-  </ul>
-  
-  <ul>
     <li><a href="http://malte-grosser.com/publication/flottmann-predict-infarct-volume/">CT-perfusion stroke imaging: a threshold free probabilistic approach to predict infarct volume compared to traditional ischemic thresholds</a></li>
   </ul>
   
@@ -241,6 +237,10 @@
   
   <ul>
     <li><a href="http://malte-grosser.com/publication/schneider-edema-diagnostic-sign/">Edema is not a reliable diagnostic sign to exclude small brain metastases</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="http://malte-grosser.com/publication/hochstein-cln3-development/">Longitudinal 8-year Brain Volumetric Analysis in 35 CLN3 Patients: Successful Development of a Sensitive Marker to Measure Clinical Outcome</a></li>
   </ul>
   
   <ul>
