--- a/public/publication_types/2/index.html
+++ b/public/publication_types/2/index.html
@@ -259,6 +259,13 @@
   </div>
   
   <div>
+    <h2><a href="http://malte-grosser.com/publication/hochstein-cln3-development/">Longitudinal 8-year Brain Volumetric Analysis in 35 CLN3 Patients: Successful Development of a Sensitive Marker to Measure Clinical Outcome</a></h2>
+    <div class="article-style">
+      
+    </div>
+  </div>
+  
+  <div>
     <h2><a href="http://malte-grosser.com/publication/faizy-ms-lesion-heterogeneity-myelin-water-imaging/">Heterogeneity of Multiple Sclerosis Lesions in Multislice Myelin Water Imaging</a></h2>
     <div class="article-style">
       
