--- a/public/404.html
+++ b/public/404.html
@@ -254,6 +254,10 @@
   <h2>Talks</h2>
   
   <ul>
+    <li><a href="http://malte-grosser.com/talk/localized_prediction/">Improved localized prediction of tissue outcome in acute ischemic stroke patients</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="http://malte-grosser.com/talk/advanced-r-solutions/">Advanced R Solutions</a></li>
   </ul>
   
