--- a/public/talk/index.html
+++ b/public/talk/index.html
@@ -244,7 +244,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://raw.githubusercontent.com/Tazinho/AlmostRandom/master/static/img/Poster_DGNR_2017.png">
+<a class="btn btn-primary btn-outline btn-xs" href="https://raw.githubusercontent.com/Tazinho/AlmostRandom/master/static/img/Poster_DGNR_2017.pdf">
   PDF
 </a>
 
