--- a/public/talk/localized_prediction/index.html
+++ b/public/talk/localized_prediction/index.html
@@ -297,7 +297,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="https://raw.githubusercontent.com/Tazinho/AlmostRandom/master/static/img/Poster_DGNR_2017.png">
+<a class="btn btn-primary btn-outline" href="https://raw.githubusercontent.com/Tazinho/AlmostRandom/master/static/img/Poster_DGNR_2017.pdf">
   PDF
 </a>
 
