--- a/public/index.html
+++ b/public/index.html
@@ -553,7 +553,7 @@ ImportWhen you do a data analysis, most of the data already exists and you impo
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://raw.githubusercontent.com/Tazinho/AlmostRandom/master/static/img/Poster_DGNR_2017.pdf">
+<a class="btn btn-primary btn-outline btn-xs" href="http://malte-grosser.com/files/talks/Poster_DGNR_2017.pdf">
   PDF
 </a>
 
